--- a/3.security_used.md
+++ b/3.security_used.md
@@ -272,5 +272,232 @@ nc 127.0.0.1 8080
 收到数据: 你好，服务端，我是客户端
 ```
 ## 3.2 Requests模块使用
+### 3.2.1 基础介绍
+在网络安全领域中，很多时候对于检测到漏洞后会给出`PoC`，之后根据指纹可以检测出更多的资产，此时针对多目标时就需要进行代码批量化检测，多数都需要使用到`requests`模块，主要是发送`http/https`请求，并获取响应结果，示例代码如下所示
+```python
+import requests
 
+x = requests.get('https://baidu.com')
+print(x.content.decode('utf-8')) # 中文解析
+```
+返回结果如下所示
+```
+<!DOCTYPE html>
+<!--STATUS OK--><html> <head><meta http-equiv=content-type content=text/html;charset=utf-8><meta http-equiv=X-UA-Compatible content=IE=Edge><meta content=always name=referrer><link rel=stylesheet type=text/css href=https://ss1.bdstatic.com/5eN1bjq8AAUYm2zgoY3K/r/www/cache/bdorz/baidu.min.css><title>百度一下，你就知道</title></head> <body link=#0000cc> <div id=wrapper> <div id=head> <div class=head_wrapper> <div class=s_form> <div class=s_form_wrapper> <div id=lg> <img hidefocus=true src=//www.baidu.com/img/bd_logo1.png width=270 height=129> </div> <form id=form name=f action=//www.baidu.com/s class=fm> <input type=hidden name=bdorz_come value=1> <input type=hidden name=ie value=utf-8> <input type=hidden name=f value=8> <input type=hidden name=rsv_bp value=1> <input type=hidden name=rsv_idx value=1> <input type=hidden name=tn value=baidu><span class="bg s_ipt_wr"><input id=kw name=wd class=s_ipt value maxlength=255 autocomplete=off autofocus=autofocus></span><span class="bg s_btn_wr"><input type=submit id=su value=百度一下 class="bg s_btn" autofocus></span> </form> </div> </div> <div id=u1> <a href=http://news.baidu.com name=tj_trnews class=mnav>新闻</a> <a href=https://www.hao123.com name=tj_trhao123 class=mnav>hao123</a> <a href=http://map.baidu.com name=tj_trmap class=mnav>地图</a> <a href=http://v.baidu.com name=tj_trvideo class=mnav>视频</a> <a href=http://tieba.baidu.com name=tj_trtieba class=mnav>贴吧</a> <noscript> <a href=http://www.baidu.com/bdorz/login.gif?login&amp;tpl=mn&amp;u=http%3A%2F%2Fwww.baidu.com%2f%3fbdorz_come%3d1 name=tj_login class=lb>登录</a> </noscript> <script>document.write('<a href="http://www.baidu.com/bdorz/login.gif?login&tpl=mn&u='+ encodeURIComponent(window.location.href+ (window.location.search === "" ? "?" : "&")+ "bdorz_come=1")+ '" name="tj_login" class="lb">登录</a>');
+                </script> <a href=//www.baidu.com/more/ name=tj_briicon class=bri style="display: block;">更多产品</a> </div> </div> </div> <div id=ftCon> <div id=ftConw> <p id=lh> <a href=http://home.baidu.com>关于百度</a> <a href=http://ir.baidu.com>About Baidu</a> </p> <p id=cp>&copy;2017&nbsp;Baidu&nbsp;<a href=http://www.baidu.com/duty/>使用百度前必读</a>&nbsp; <a href=http://jianyi.baidu.com/ class=cp-feedback>意见反馈</a>&nbsp;京ICP证030173号&nbsp; <img src=//www.baidu.com/img/gs.gif> </p> </div> </div> </div> </body> </html>
+```
+每次调用`requests`请求之后，都会返回一个`response`对象，该对象包含了具体的响应信息，如状态码、响应头以及响应内容等，部分响应信息如下所示
+```
+apparent_encoding 编码方式
+close() 关闭与服务器的连接
+content 返回响应内容，以字节为单位
+cookies 返回一个CookieJar对象，包含了从服务器发回的cookie
+elapsed 返回一个timedelta对象，发送到响应的时间量，可用于测试响应速度
+encoding 解码x.text的编码方式
+headers 返回响应头，字典格式
+history 返回包含请求历史的相应对象列表
+is_permanent_redirect 如果响应是永久重定向的url，则返回true，反之false
+is_redirect 如果响应被重定向，则返回true，反之false
+iter_content() 迭代响应
+iter_lines() 迭代响应的行
+json() 返回结果的JSON对象（结果需要以JSON格式编写，否则出错）
+links 返回响应的解析头链接
+next 返回重定向链中下一个请求的PreparedRequest对象
+raise_for_status() 如发生错误，返回一个HTTPError对象
+reason 响应状态的描述
+request 返回请求此响应的请求对象
+status_code 返回http状态码
+text 返回响应内容，unicode类型数据
+url 返回响应的URL
+```
+对于`requests`的使用方法如下所示
+```
+delete(url,args) 发送DELETE请求到指定url
+get(url,params,args) 发送GET请求到指定url
+head(url,args) 发送HEAD请求到指定url
+patch(url,data,args) 发送PATCH请求到指定url
+post(url,data,json,args) 发送POST请求到指定url
+put(url,data,args) 发送PUT请求到指定url
+request(method,url,args) 向指定url发送指定的请求方法
+```
+### 3.2.2 requests使用
+在`requests`基本方法知道后，我们可以进一步的使用该模块，如果在撰写`exp`时，发现会对部分请求头进行检测时，我们可以自定义加入，使得请求更加完整，示列代码如下所示
+```python
+import requests
+
+headers = {
+    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'
+}
+
+resp = requests.get('https://httpbin.org/get', headers=headers)
+print(resp.json()) # 返回格式为json
+```
+上面的样例代码主要是针对的`GET`请求方式，下面是`POST`示例代码
+```python
+import requests
+
+headers = {
+    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'
+}
+
+payload = {
+    'param1': 'value1',
+    'param2': 'value2'
+}
+
+resp = requests.post('https://httpbin.org/post', headers=headers, data=payload)
+print(resp.text) # 与上面的json区别
+```
+输出如下所示，上面的`GET`代码也是类似，只是用`json()`格式化了
+```
+{
+  "args": {}, 
+  "data": "", 
+  "files": {}, 
+  "form": {
+    "param1": "value1", 
+    "param2": "value2"
+  }, 
+  "headers": {
+    "Accept": "*/*", 
+    "Accept-Encoding": "gzip, deflate", 
+    "Content-Length": "27", 
+    "Content-Type": "application/x-www-form-urlencoded", 
+    "Host": "httpbin.org", 
+    "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3", 
+    "X-Amzn-Trace-Id": "Root=1-696266c5-599454905262024b7c21fc2e"
+  }, 
+  "json": null, 
+  "origin": "23.249.26.213", 
+  "url": "https://httpbin.org/post"
+}
+```
+### 3.2.3 作业
+#### 3.2.3.1 DVWA SQLi
+写一个用于测试`DVWA`中的`SQLI`部分（下面是我在`CCISC`比赛时写的`WAF`批量自动化测试脚本中的测试函数，仅供参考）
+```python
+def login_and_sqli_test(username,password,target,dvwa_url):
+    print('--'*40)
+    print(f"[+] 正在测试{target}--{dvwa_url}\n")
+
+    # 拿 user_token，等价 CSRF_Token，并进行持久化
+    session = requests.Session()
+    req_token = session.get(f'{dvwa_url}/login.php')
+    soup = BeautifulSoup(req_token.text,'html.parser')
+    user_token = soup.find('input',attrs={'name':'user_token'})['value']
+
+    headers = {
+        "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/136.0.0.0 Safari/537.36"
+    }
+    
+    # 拿验证 Token
+    login_data = {
+        'username': username,
+        'password': password,
+        'Login': 'Login',
+        'user_token': user_token
+    }
+    req_login = session.post(f'{dvwa_url}/login.php',data=login_data)
+
+    # 设置为 Low 确保防护完全由 WAF 来
+    security_data = {
+        'security': 'low',
+        'seclev_submit': 'Submit',
+        'user_token': user_token
+    }
+    req_security = session.post(f'{dvwa_url}/security.php',data=security_data)
+
+    # SQLi 测试部分
+    for file_type in files:
+        match = re.search(r'/([^/]+)\.txt$',file_type)
+        test_type = match.group(1)
+        with open(file_type,'r') as f:
+            payloads = f.readlines()
+            payloads = [payload.strip() for payload in payloads]
+
+            print(f"[+] 开始测试 {test_type}")
+            for payload in payloads:
+                # print(f"[+] 正在测试 {payload} ")
+                sqli_data = {
+                    'id': '1' + payload,
+                    'Submit': 'Submit'
+                }
+                req_sqli = session.get(f'{dvwa_url}/vulnerabilities/sqli/',params=sqli_data)
+                
+                # 统计数据
+                if req_sqli.status_code == 200:
+                    result[target][test_type] += 1
+            print(f"[+] {test_type} 已测试完成\n")
+            time.sleep(2)
+    print(f"[+] {dvwa_url} 已测试完成\n")
+    print('--'*40)
+    return result
+```
+#### 3.2.3.2 VT接口逆向实现自动查询
+通过查询接口实现（非`API`）来进行`IP`是否恶意的查询，其中会涉及到一个认证头的使用，这是认证头地址`https://www.virustotal.com/gui/main.d3a4ab5b29d6a93642df.js`
+```python
+import re,requests,base64,random,time
+
+# Virustotal computeAntiAbuseHeader接口
+def computeAntiAbuseHeader():
+    e = time.time()
+    n = 1e10 * (1 + random.random() % 5e4)
+    raw = f'{n:.0f}-ZG9udCBiZSBldmls-{e:.3f}'
+    res = base64.b64encode(raw.encode())
+    return res.decode()
+
+# 提IP
+def extract_ips(file_path):
+    with open(file_path, "r", encoding='utf-8') as f:
+        content = f.read()
+    return re.findall(r"(?:\d{1,3}\.){3}\d{1,3}", content)
+
+def query_ip(ip):
+    url = f"https://www.virustotal.com/ui/ip_addresses/{ip}"
+    headers = {
+        "Accept-Language": "en-US,en;q=0.9,es;q=0.8",
+        "sec-ch-ua-platform": "macOS",
+        "Referer": "https://www.virustotal.com/",
+        "sec-ch-ua": '"Chromium";v="140", "Not=A?Brand";v="24", "Microsoft Edge";v="140"',
+        "X-VT-Anti-Abuse-Header": computeAntiAbuseHeader(),
+        "sec-ch-ua-mobile": "?0",
+        "X-Tool": "vt-ui-main",
+        "x-app-version": "v1x460x0",
+        "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/143.0.0.0 Safari/537.36",
+        "accept": "application/json",
+        "Content-Type": "application/json"
+    }
+    
+    try:
+        resp = requests.get(url=url, headers=headers, timeout=10)
+        data = resp.json()
+        stats = data.get('data', {}).get('attributes', {}).get('last_analysis_stats', {})
+        return stats
+    except Exception as e:
+        print(f"[!] 查询 {ip} 出错: {e}")
+        return {}
+    
+def main():
+    file_path = input("请输入文件路径：").strip()
+    ips = extract_ips(file_path)
+    print(ips)
+
+    if not ips:
+        print(f"[!] 没有任何 IP 可提取")
+        return
+    
+    for ip in ips:
+        stats = query_ip(ip)
+        if not stats:
+            continue
+        malicious = stats.get("malicious", 0)
+        vt_url = f"https://www.virustotal.com/ui/ip_addresses/{ip}"
+        if malicious > 0:
+            print(f"IP: {ip}\nVT地址: {vt_url}\n结果: {malicious}/94 security vendor flagged this IP address as malicious\n")
+        else:
+            print(f"IP: {ip} 为正常 IP\n")
+
+if __name__ == "__main__":
+    main()
+```
 ## 3.3 Re模块使用
