--- a/3.security_used.md
+++ b/3.security_used.md
@@ -501,3 +501,34 @@ if __name__ == "__main__":
     main()
 ```
 ## 3.3 Re模块使用
+`Re`模块主要是通过一系列正则匹配去查找特定的字符，这在安全领域中也是常用的，因为可以通过此进行安全检测，或是规则的模糊测试
+### 3.3.1 re.match
+在`re`模块的`match`方法里面，主要是从字符串的起始位置开始匹配，其语法如下所示
+```python
+re.match(pattern,string,flags=0)
+```
+其中，`pattern`参数为将要匹配的内容/表达式，而`string`参数为要进行匹配的字符串，最后的`flags`为可选参数，主要有如下可选
+```
+re.I 使匹配对大小写不敏感
+re.L 做本地化识别匹配
+re.M 多行匹配，影响^与$
+re.S 使.匹配包括换行在内的所有字符
+re.U 根据Unicode字符集解析字符，影响\w \W \b \B
+re.X 	该标志通过给予你更灵活的格式以便你将正则表达式写得更易于理解
+```
+因此，如果匹配的内容不在起始位置的话，是不能匹配到的，示例代码如下所示
+```python
+import re
+
+text = "' union select 1,2,3#"
+findchr = "select"
+
+if re.match(pattern=findchr,string=text):
+    print("Match!")
+else:
+    print("No Match")
+```
+输出结果如下所示
+```
+No Match
+```
