--- a/3.security_used.md
+++ b/3.security_used.md
@@ -501,8 +501,31 @@ if __name__ == "__main__":
     main()
 ```
 ## 3.3 Re模块使用
-`Re`模块主要是通过一系列正则匹配去查找特定的字符，这在安全领域中也是常用的，因为可以通过此进行安全检测，或是规则的模糊测试
-### 3.3.1 re.match
+`Re`模块主要是通过一系列正则匹配去查找特定的字符，这在安全领域中也是常用的，因为可以通过此进行安全检测，或是规则的模糊测试，下面是主要的正则表达式语法
+```
+1.常规单词
+
+2.特殊字符：
+.（匹配任意单个字符，换行符除外）
+*（匹配前面的字符零次或多次）
++（匹配前面的字符一次或多次）
+?（匹配前面的字符零次或多次）
+\d（匹配任意数字字符）
+\w（匹配任意字母、数字或下划线字符）
+
+3.字符集
+[abc]匹配a/b/c中任一字符
+
+4.分组匹配
+(ab)+ 表示匹配ab这种组合的内容
+```
+下面是核心函数
+```
+re.compile(pattern) 预编译正则表达式 pat = re.compile(r'\d+')
+re.search(pattern,string) 搜索字符串中第一个匹配项
+re.fullmatch(pattern,string) 整个字符串完全匹配
+```
+### 3.3.1 re.match()
 在`re`模块的`match`方法里面，主要是从字符串的起始位置开始匹配，其语法如下所示
 ```python
 re.match(pattern,string,flags=0)
@@ -531,4 +554,49 @@ else:
 输出结果如下所示
 ```
 No Match
+```
+### 3.3.2 re.search()
+与`3.3.1`的区别在于，该方法是从字符串中进行搜索，而不是在开头进行，示例代码如下所示
+```python
+import re
+
+finding = r'union'
+text = "'/**/union/**/select+1,2,3#"
+
+if re.search(pattern=finding,string=text):
+    print("Match")
+else:
+    print("No Match")
+```
+输出结果如下所示
+```
+Match
+```
+### 3.3.3 re.findall()
+该方法主要是用于在字符串中按照特定的正则表达式进行匹配的子串，并返回一个包含这些子串的列表，示例代码如下所示
+```python
+import re
+
+regx = r'\d+'
+text = "select 1,2,3#"
+
+print(re.findall(pattern=regx,string=text))
+```
+输出结果如下所示
+```
+['1', '2', '3']
+```
+### 3.3.4 re.sub()
+该方法主要是用来替换符合匹配规则部分为其他内容的方法，示例代码如下所示
+```python
+import re
+
+regx = r'or'
+text = "admin' or 1=1#"
+
+print(re.sub(pattern=regx,string=text,repl="||"))
+```
+输出结果如下所示
+```
+admin' || 1=1#
 ```
